--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/Bangalore-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta property="og:title" content="bangalore.wiki">
+    <meta property="og:description" content="a local's guide to falling in love with Bangalore">
+    <title>bangalore.wiki</title>
   </head>
   <body>
     <div id="root"></div>
