updated svg icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/Bangalore-icon.png" />
+  <link rel="icon" type="image/png" href="/bangalore.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="bangalore.wiki">
   <meta property="og:description" content="a local's guide to falling in love with Bangalore">
